[build-system]
requires = [
    "setuptools>=61.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["toluene*"]
exclude = ["docs*", "scratch*", "tests*", "wheelhouse*"]

[tool.setuptools.package-data]
"*" = ["*.yml"]
toluene = [
    "data/deltat.data",
    "data/finals2000A.all",
]

[project]
name = "toluene"
dynamic = ['version']
description = "Python library for geospatial, orbital, and image processing functions"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers=[
    'Development Status :: 1 - Planning',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX',
    'Programming Language :: C',
    'Programming Language :: Python :: 3.8',
    'Topic :: Scientific/Engineering :: GIS',
    'Topic :: Scientific/Engineering :: Image Processing',
    'Typing :: Typed'
]
dependencies = [
]

[project.optional-dependencies]
update-data = [
    "pyyaml",
    "requests",
]

[tool.setuptools.dynamic]
version = {attr = "toluene.__version__"}

[project.scripts]
toluene-build-config = "toluene.apps.config_builder:main"

[project.urls]
homepage = "https://github.com/Tri-Nitro/Toluene"
documentation = "https://nitro-toluene.org/"
repository = "https://github.com/Tri-Nitro/Toluene"